--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -13,8 +14,11 @@ header {
 }
 
 footer {
-  max-height: 11vh;
-  max-width: 100%;
+  font-size: medium;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4em;
   color: #eeeeee;
 }
 
